--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,11 +34,11 @@ jobs:
       workingDir: "terraform"
   
   docker-build:
-    name: "Terraform Validate"
+    name: "Docker Build"
     uses: ./.github/workflows/tf-validate.yml
     with:
       environment: "dev"
-      workingDir: "terraform"
+      workingDir: "docker"
 
   terraform-plan:
     name: "Terraform Plan"
