--- a/.github/workflows/tf-plan.yml
+++ b/.github/workflows/tf-plan.yml
@@ -123,3 +123,48 @@ jobs:
                   repo: context.repo.repo,
                   body: body
               })
+
+  terraform-apply-dev:
+    name: 'Terraform Apply'
+    if: ( github.ref == 'refs/heads/main' || ${{ inputs.autoApply }} == true ) && needs.terraform-plan-dev.outputs.tfplanExitCode == 2
+    runs-on: ubuntu-latest
+    environment: ${{ inputs.environment }}
+    needs: [terraform-plan-dev]
+    defaults:
+      run:
+        working-directory: ${{ env.WORKING_DIR }}
+    steps:
+    # Checkout the repository to the GitHub Actions runner
+    - name: Checkout
+      uses: actions/checkout@v4
+
+    # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v3
+
+    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+    - name: Terraform Init
+      run: terraform init
+
+    # Download saved plan from artifacts
+    - name: Download Terraform Plan
+      uses: actions/download-artifact@v4
+      with:
+        name: tfplan
+        path: "${{ env.WORKING_DIR }}"
+        merge-multiple: true
+
+    - name: Terraform List Dir
+      run: |
+        ls -la
+
+    # Terraform Apply
+    - name: Terraform Apply
+      run: terraform apply -auto-approve tfplan
+
+    # Save plan to artifacts
+    - name: Publish Terraform Plan
+      uses: actions/upload-artifact@v4
+      with:
+        name: "tfstate-${{ inputs.environment }}"
+        path: "${{ env.WORKING_DIR }}/terraform.tfstate"
