--- a/.github/workflows/tf-plan.yml
+++ b/.github/workflows/tf-plan.yml
@@ -124,19 +124,19 @@ jobs:
                   body: body
               })
 
-  terraform-apply-dev:
+  terraform-apply:
     name: 'Terraform Apply'
     if: ( github.ref == 'refs/heads/main' || ${{ inputs.autoApply }} == true ) && needs.terraform-plan-dev.outputs.tfplanExitCode == 2
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
-    needs: [terraform-plan-dev]
+    needs: [terraform-plan]
     defaults:
       run:
         working-directory: ${{ env.WORKING_DIR }}
     steps:
     # Checkout the repository to the GitHub Actions runner
     - name: Checkout
-      uses: actions/checkout@v4
+      uses: actions/checkout@v5
 
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
