adding docker build

--- a/.github/workflows/tf-plan.yml
+++ b/.github/workflows/tf-plan.yml
@@ -160,7 +160,7 @@ jobs:
 
     # Terraform Apply
     - name: Terraform Apply
-      run: terraform apply -auto-approve tfplan
+      run: terraform apply -var-file=${{ inputs.environment }}.tfvars -auto-approve tfplan
 
     # Save plan to artifacts
     - name: Publish Terraform Plan
