--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,15 @@ on:
         required: true
         type: string
 
+#These environment variables are used by the terraform azure provider to setup OIDD authenticate.
+env:
+  AWS_ACCOUNT_ID: ${{ vars.AWS_ACCOUNT_ID }}
+  AWS_REGION: ${{ vars.AWS_REGION }}
+  AWS_ROLE_ARN: ${{ vars.AWS_ROLE_ARN }}
+  AWS_ROLE_SESSION_NAME: ${{ vars.ROLE_SESSION_NAME }}
+  TF_VAR_ROLE_SESSION_NAME: ${{ vars.ROLE_SESSION_NAME }}
+  WORKING_DIR: ${{ inputs.workingDir }}
+  
 jobs:
   docker-build:
     name: 'Docker Build'
