adding image tag

--- a/.github/workflows/tf-plan.yml
+++ b/.github/workflows/tf-plan.yml
@@ -21,6 +21,7 @@ env:
   AWS_ROLE_ARN: ${{ vars.AWS_ROLE_ARN }}
   AWS_ROLE_SESSION_NAME: ${{ vars.ROLE_SESSION_NAME }}
   TF_VAR_ROLE_SESSION_NAME: ${{ vars.ROLE_SESSION_NAME }}
+  TF_VAR_SHA: ${{ github.sha }}
   WORKING_DIR: ${{ inputs.workingDir }}
 
 jobs:
