--- a/.github/workflows/tf-validate.yml
+++ b/.github/workflows/tf-validate.yml
@@ -11,7 +11,7 @@ on:
         type: string
 
 env:
-  TF_VAR_SHA: ${{ github.sha }}
+  TF_VAR_sha: ${{ github.sha }}
 
 jobs:
   terraform-unit-tests:
