adding terraform plan

--- a/docker/config.json
+++ b/docker/config.json
@@ -18,5 +18,12 @@
                 }
             ]
         }
+    },
+    "config_store": {
+        "enabled": true,
+        "type": "sqlite",
+        "config": {
+        "path": "/data/config.db"
+        }
     }
 }
