--- a/docker/config.json
+++ b/docker/config.json
@@ -3,17 +3,20 @@
         "bedrock": {
             "keys": [
                 {
-                    "models": ["anthropic.claude-3-sonnet-20240229-v1:0", "anthropic.claude-v2:1"],
+                    "models": [
+                        "anthropic.claude-3-sonnet-20240229-v1:0", 
+                        "claude-3-haiku"
+                    ],
                     "weight": 1.0,
                     "bedrock_key_config": {
                         "access_key": "env.AWS_ACCESS_KEY_ID",
                         "secret_key": "env.AWS_SECRET_ACCESS_KEY",
                         "session_token": "env.AWS_SESSION_TOKEN",
-                        "region": "us-east-1",
+                        "region": "us-gov-west-1",
                         "deployments": {
-                            "claude-3-sonnet": "us.anthropic.claude-3-sonnet-20240229-v1:0"
+                            "claude-3-sonnet": "anthropic.claude-3-haiku-20240307-v1:0"
                         },
-                        "arn": "arn:aws:bedrock:us-east-1:123456789012:inference-profile"
+                        "arn": "arn:aws-us-gov:bedrock:us-gov-west-1::foundation-model/anthropic.claude-3-haiku-20240307-v1:0"
                     }
                 }
             ]
@@ -23,7 +26,7 @@
         "enabled": true,
         "type": "sqlite",
         "config": {
-        "path": "/data/config.db"
+            "path": "/data/config.db"
         }
     }
 }
