--- a/docker/config.json
+++ b/docker/config.json
@@ -14,7 +14,7 @@
                         "session_token": "env.AWS_SESSION_TOKEN",
                         "region": "us-gov-west-1",
                         "deployments": {
-                            "claude-3-sonnet": "us.anthropic.claude-3-sonnet-20240229-v1:0"
+                            "claude-3-sonnet": "us-gov.anthropic.claude-3-haiku-20240307-v1:0"
                         },
                         "arn": "arn:aws-us-gov:bedrock:us-gov-west-1::foundation-model/anthropic.claude-3-haiku-20240307-v1:0"
                     }
