--- a/docker/config.json
+++ b/docker/config.json
@@ -16,7 +16,24 @@
                         "deployments": {
                             "claude-3-sonnet": "us-gov.anthropic.claude-3-haiku-20240307-v1:0"
                         },
-                        "arn": "arn:aws-us-gov:bedrock:us-gov-west-1::foundation-model/anthropic.claude-3-haiku-20240307-v1:0"
+                        "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us-gov.anthropic.claude-3-haiku-20240307-v1:0"
+                    }
+                },
+                {
+                    "models": [
+                        "anthropic.claude-3-sonnet-20240229-v1:0", 
+                        "claude-3-haiku"
+                    ],
+                    "weight": 1.0,
+                    "bedrock_key_config": {
+                        "access_key": "env.AWS_ACCESS_KEY_ID",
+                        "secret_key": "env.AWS_SECRET_ACCESS_KEY",
+                        "session_token": "env.AWS_SESSION_TOKEN",
+                        "region": "us-gov-west-1",
+                        "deployments": {
+                            "claude-3-sonnet": "us-gov.anthropic.claude-3-haiku-20240307-v1:0"
+                        },
+                        "arn": "arn:aws-us-gov:bedrock:us-gov-west-1:465578772136:inference-profile/us-gov.anthropic.claude-3-haiku-20240307-v1:0"
                     }
                 }
             ]
