--- a/docker/config.json
+++ b/docker/config.json
@@ -4,7 +4,6 @@
             "keys": [
                 {
                     "models": [
-                        "anthropic.claude-3-sonnet-20240229-v1:0", 
                         "claude-3-haiku"
                     ],
                     "weight": 1.0,
@@ -14,7 +13,7 @@
                         "session_token": "env.AWS_SESSION_TOKEN",
                         "region": "us-gov-west-1",
                         "deployments": {
-                            "claude-3-sonnet": "us-gov.anthropic.claude-3-haiku-20240307-v1:0"
+                            "claude-3-haiku": "us-gov.anthropic.claude-3-haiku-20240307-v1:0"
                         },
                         "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us-gov.anthropic.claude-3-haiku-20240307-v1:0"
                     }
