--- a/docker/config.json
+++ b/docker/config.json
@@ -3,16 +3,17 @@
         "bedrock": {
             "keys": [
                 {
-                    "models": [
-                        "claude-3-haiku"
-                    ],
+                    "models": [],
                     "weight": 1.0,
                     "bedrock_key_config": {
-                        "region": "us-gov-east-1",
-                        "deployments": {
-                            "claude-3-haiku": "us-gov.anthropic.claude-3-haiku-20240307-v1:0"
-                        },
-                        "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us-gov.anthropic.claude-3-haiku-20240307-v1:0"
+                        "region": "us-gov-west-1"
+                    }
+                },
+                {
+                    "models": [],
+                    "weight": 1.0,
+                    "bedrock_key_config": {
+                        "region": "us-gov-east-1"
                     }
                 }
             ]
