--- a/docker/config.json
+++ b/docker/config.json
@@ -3,10 +3,23 @@
         "bedrock": {
             "keys": [
                 {
-                    "models": [],
+                    "models": ["claude-3-haiku"],
                     "weight": 1.0,
                     "bedrock_key_config": {
-                        "region": "us-gov-east-1"
+                        "region": "us-gov-west-1",
+                         "deployments": {
+                            "claude-3-sonnet": "arn:aws-us-gov:bedrock:us-gov-west-1::foundation-model/anthropic.claude-3-haiku-20240307-v1:0"
+                        }
+                    }
+                },
+                {
+                    "models": ["claude-3-haiku"],
+                    "weight": 1.0,
+                    "bedrock_key_config": {
+                        "region": "us-gov-east-1",
+                         "deployments": {
+                            "claude-3-sonnet": "arn:aws-us-gov:bedrock:us-gov-east-1::foundation-model/anthropic.claude-3-haiku-20240307-v1:0"
+                        }
                     }
                 }
             ]
