--- a/docker/config.json
+++ b/docker/config.json
@@ -6,19 +6,9 @@
                     "models": ["claude-3-haiku"],
                     "weight": 1.0,
                     "bedrock_key_config": {
-                        "region": "us-gov-west-1",
-                         "deployments": {
-                            "claude-3-sonnet": "arn:aws-us-gov:bedrock:us-gov-west-1::foundation-model/anthropic.claude-3-haiku-20240307-v1:0"
-                        }
-                    }
-                },
-                {
-                    "models": ["claude-3-haiku"],
-                    "weight": 1.0,
-                    "bedrock_key_config": {
                         "region": "us-gov-east-1",
                          "deployments": {
-                            "claude-3-sonnet": "arn:aws-us-gov:bedrock:us-gov-east-1::foundation-model/anthropic.claude-3-haiku-20240307-v1:0"
+                            "claude-3-sonnet": "us-gov.anthropic.claude-3-5-sonnet-20240620-v1:0"
                         }
                     }
                 }
