--- a/docker/config.json
+++ b/docker/config.json
@@ -8,7 +8,7 @@
                     "bedrock_key_config": {
                         "region": "us-gov-east-1",
                          "deployments": {
-                            "claude-3-sonnet": "us-gov.anthropic.claude-3-5-sonnet-20240620-v1:0"
+                            "claude-3-haiku": "us-gov.anthropic.claude-3-5-sonnet-20240620-v1:0"
                         }
                     }
                 },
@@ -18,7 +18,7 @@
                     "bedrock_key_config": {
                         "region": "us-gov-east-1",
                          "deployments": {
-                            "claude-3-sonnet": "us-gov.anthropic.claude-3-7-sonnet-20250219-v1:0"
+                            "claude-3-7-sonnet": "us-gov.anthropic.claude-3-7-sonnet-20250219-v1:0"
                         }
                     }
                 },
@@ -28,7 +28,7 @@
                     "bedrock_key_config": {
                         "region": "us-gov-east-1",
                          "deployments": {
-                            "claude-3-sonnet": "us-gov.anthropic.claude-3-5-sonnet-20240620-v1:0"
+                            "claude-3-5-sonnet": "us-gov.anthropic.claude-3-5-sonnet-20240620-v1:0"
                         }
                     }
                 }
