--- a/docker/config.json
+++ b/docker/config.json
@@ -7,7 +7,23 @@
                     "weight": 1.0,
                     "bedrock_key_config": {
                         "region": "us-gov-east-1",
-                        "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us-gov.anthropic.claude-3-haiku-20240307-v1:0"
+                        "arn": "arn:aws-us-gov:bedrock:us-gov-east-1::foundation-model/anthropic.claude-3-haiku-20240307-v1:0"
+                    }
+                },
+                {
+                    "models": ["claude-3-haiku"],
+                    "weight": 1.0,
+                    "bedrock_key_config": {
+                        "region": "us-gov-west-1",
+                        "arn": "arn:aws-us-gov:bedrock:us-gov-west-1::foundation-model/anthropic.claude-3-haiku-20240307-v1:0"
+                    }
+                },
+                {
+                    "models": ["claude-3-5-sonnet"],
+                    "weight": 1.0,
+                    "bedrock_key_config": {
+                        "region": "us-gov-west-1",
+                        "arn": "arn:aws-us-gov:bedrock:us-gov-west-1::foundation-model/anthropic.claude-3-5-sonnet-20240620-v1:0"
                     }
                 },
                 {
@@ -15,7 +31,7 @@
                     "weight": 1.0,
                     "bedrock_key_config": {
                         "region": "us-gov-east-1",
-                        "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us-gov.anthropic.claude-3-5-sonnet-20240620-v1:0"
+                        "arn": "arn:aws-us-gov:bedrock:us-gov-east-1::foundation-model/anthropic.claude-3-5-sonnet-20240620-v1:0"
                     }
                 },
                 {
