--- a/docker/config.json
+++ b/docker/config.json
@@ -14,36 +14,26 @@
                     "arn": "arn:aws-us-gov:bedrock:us-gov-east-1::foundation-model/anthropic.claude-3-haiku-20240307-v1:0"
                 },
                 {
-                    "models": ["claude-3-5-sonnet"],
+                    "models": ["anthropic.claude-3-5-sonnet-20240620-v1:0"],
                     "weight": 1.0,
                     "bedrock_key_config": {
                         "region": "us-gov-west-1",
-                        "arn": "arn:aws-us-gov:bedrock:us-gov-west-1::foundation-model/anthropic.claude-3-5-sonnet-20240620-v1:0"
-                    }
+                        "deployments": {
+                            "claude-3-5-sonnet": "us-gov.anthropic.claude-3-5-sonnet-20240620-v1:0"
+                        }
+                    },
+                    "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us-gov.anthropic.claude-3-5-sonnet-20240620-v1:0"
                 },
                 {
-                    "models": ["claude-3-5-sonnet"],
+                    "models": ["anthropic.claude-3-7-sonnet-20250219-v1:0"],
                     "weight": 1.0,
                     "bedrock_key_config": {
                         "region": "us-gov-east-1",
-                        "arn": "arn:aws-us-gov:bedrock:us-gov-east-1::foundation-model/anthropic.claude-3-5-sonnet-20240620-v1:0"
-                    }
-                },
-                {
-                    "models": ["claude-3-7-sonnet"],
-                    "weight": 1.0,
-                    "bedrock_key_config": {
-                        "region": "us-gov-east-1",
-                        "arn": "arn:aws-us-gov:bedrock:us-gov-east-1::foundation-model/anthropic.claude-3-7-sonnet-20250219-v1:0"
-                    }
-                },
-                {
-                    "models": ["claude-3-7-sonnet"],
-                    "weight": 1.0,
-                    "bedrock_key_config": {
-                        "region": "us-gov-west-1",
-                        "arn": "arn:aws-us-gov:bedrock:us-gov-west-1::foundation-model/anthropic.claude-3-7-sonnet-20250219-v1:0"
-                    }
+                        "deployments": {
+                            "claude-3-5-sonnet": "us-gov.anthropic.claude-3-7-sonnet-20250219-v1:0"
+                        }
+                    },
+                    "arn": "arn:aws-us-gov:bedrock:us-gov-east-1::foundation-model/anthropic.claude-3-7-sonnet-20250219-v1:0"
                 }
             ]
         }
