--- a/docker/config.json
+++ b/docker/config.json
@@ -6,6 +6,9 @@
                     "models": ["anthropic.claude-3-haiku-20240307-v1:0"],
                     "weight": 1.0,
                     "bedrock_key_config": {
+                        "access_key": "env.AWS_ACCESS_KEY_ID",
+                        "secret_key": "env.AWS_SECRET_ACCESS_KEY",
+                        "session_token": "env.AWS_SESSION_TOKEN",
                         "region": "us-gov-east-1",
                         "deployments": {
                             "claude-3-haiku": "us-gov.anthropic.claude-3-haiku-20240307-v1:0"
