--- a/docker/config.json
+++ b/docker/config.json
@@ -14,18 +14,18 @@
                             "claude-3-haiku": "us-gov.anthropic.claude-3-haiku-20240307-v1:0"
                         }
                     },
-                    "arn": "arn:aws-us-gov:bedrock:us-gov-east-1::foundation-model/anthropic.claude-3-haiku-20240307-v1:0"
+                    "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us-gov.anthropic.claude-3-haiku-20240307-v1:0"
                 },
                 {
                     "models": ["anthropic.claude-3-5-sonnet-20240620-v1:0"],
                     "weight": 1.0,
                     "bedrock_key_config": {
-                        "region": "us-gov-west-1",
+                        "region": "us-gov-east-1",
                         "deployments": {
                             "claude-3-5-sonnet": "us-gov.anthropic.claude-3-5-sonnet-20240620-v1:0"
                         }
                     },
-                    "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us-gov.anthropic.claude-3-5-sonnet-20240620-v1:0"
+                    "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us.anthropic.claude-3-5-sonnet-20240620-v1:0"
                 },
                 {
                     "models": ["anthropic.claude-3-7-sonnet-20250219-v1:0"],
@@ -36,7 +36,7 @@
                             "claude-3-5-sonnet": "us-gov.anthropic.claude-3-7-sonnet-20250219-v1:0"
                         }
                     },
-                    "arn": "arn:aws-us-gov:bedrock:us-gov-east-1::foundation-model/anthropic.claude-3-7-sonnet-20250219-v1:0"
+                    "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us-gov.anthropic.claude-3-7-sonnet-20250219-v1:0"
                 }
             ]
         }
