--- a/docker/config.json
+++ b/docker/config.json
@@ -3,38 +3,26 @@
         "bedrock": {
             "keys": [
                 {
-                    "models": ["anthropic.claude-3-haiku-20240307-v1:0"],
+                    "models": ["claude-3-haiku"],
                     "weight": 1.0,
                     "bedrock_key_config": {
-                        "access_key": "env.AWS_ACCESS_KEY_ID",
-                        "secret_key": "env.AWS_SECRET_ACCESS_KEY",
-                        "session_token": "env.AWS_SESSION_TOKEN",
-                        "region": "us-gov-east-1",
-                        "deployments": {
-                            "claude-3-haiku": "us-gov.anthropic.claude-3-haiku-20240307-v1:0"
-                        }
+                        "region": "us-gov-east-1"
                     },
                     "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us-gov.anthropic.claude-3-haiku-20240307-v1:0"
                 },
                 {
-                    "models": ["anthropic.claude-3-5-sonnet-20240620-v1:0"],
+                    "models": ["claude-3-5-sonnet"],
                     "weight": 1.0,
                     "bedrock_key_config": {
-                        "region": "us-gov-east-1",
-                        "deployments": {
-                            "claude-3-5-sonnet": "us-gov.anthropic.claude-3-5-sonnet-20240620-v1:0"
-                        }
+                        "region": "us-gov-east-1"
                     },
                     "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us.anthropic.claude-3-5-sonnet-20240620-v1:0"
                 },
                 {
-                    "models": ["anthropic.claude-3-7-sonnet-20250219-v1:0"],
+                    "models": ["claude-3-7-sonnet"],
                     "weight": 1.0,
                     "bedrock_key_config": {
-                        "region": "us-gov-east-1",
-                        "deployments": {
-                            "claude-3-5-sonnet": "us-gov.anthropic.claude-3-7-sonnet-20250219-v1:0"
-                        }
+                        "region": "us-gov-east-1"
                     },
                     "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us-gov.anthropic.claude-3-7-sonnet-20250219-v1:0"
                 }
