--- a/docker/config.json
+++ b/docker/config.json
@@ -8,7 +8,7 @@
                     "bedrock_key_config": {
                         "region": "us-gov-east-1"
                     },
-                    "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us-gov.anthropic.claude-3-haiku-20240307-v1:0"
+                    "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile"
                 },
                 {
                     "models": ["claude-3-5-sonnet"],
@@ -16,7 +16,7 @@
                     "bedrock_key_config": {
                         "region": "us-gov-east-1"
                     },
-                    "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us.anthropic.claude-3-5-sonnet-20240620-v1:0"
+                    "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile"
                 },
                 {
                     "models": ["claude-3-7-sonnet"],
@@ -24,7 +24,7 @@
                     "bedrock_key_config": {
                         "region": "us-gov-east-1"
                     },
-                    "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us-gov.anthropic.claude-3-7-sonnet-20250219-v1:0"
+                    "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile"
                 }
             ]
         }
