--- a/docker/config.json
+++ b/docker/config.json
@@ -6,9 +6,12 @@
                     "models": ["claude-3-haiku"],
                     "weight": 1.0,
                     "bedrock_key_config": {
+                        "access_key": "",
+                        "secret_key": "",
+                        "session_token": "",
                         "region": "us-gov-east-1",
                         "deployments": {
-                            "claude-3-sonnet": "us-gov.anthropic.claude-3-haiku-20240307-v1:0"
+                            "claude-3-haiku": "us-gov.anthropic.claude-3-haiku-20240307-v1:0"
                         }
                     },
                     "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile"
@@ -17,9 +20,12 @@
                     "models": ["claude-3-5-sonnet"],
                     "weight": 1.0,
                     "bedrock_key_config": {
+                        "access_key": "",
+                        "secret_key": "",
+                        "session_token": "",
                         "region": "us-gov-east-1",
                         "deployments": {
-                            "claude-3-sonnet": "us-gov.anthropic.claude-3-5-sonnet-20240620-v1:0"
+                            "claude-3-5-sonnet": "us-gov.anthropic.claude-3-5-sonnet-20240620-v1:0"
                         }
                     },
                     "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile"
@@ -28,9 +34,12 @@
                     "models": ["claude-3-7-sonnet"],
                     "weight": 1.0,
                     "bedrock_key_config": {
+                        "access_key": "",
+                        "secret_key": "",
+                        "session_token": "",
                         "region": "us-gov-east-1",
                         "deployments": {
-                            "claude-3-sonnet": "us-gov.anthropic.claude-3-7-sonnet-20250219-v1:0"
+                            "claude-3-7-sonnet": "us-gov.anthropic.claude-3-7-sonnet-20250219-v1:0"
                         }
                     },
                     "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile"
