--- a/docker/config.json
+++ b/docker/config.json
@@ -14,7 +14,7 @@
                             "claude-3-haiku": "us-gov.anthropic.claude-3-haiku-20240307-v1:0"
                         }
                     },
-                    "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile"
+                    "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us-gov.anthropic.claude-3-haiku-20240307-v1:0"
                 },
                 {
                     "models": ["claude-3-5-sonnet"],
@@ -25,10 +25,10 @@
                         "session_token": "",
                         "region": "us-gov-east-1",
                         "deployments": {
-                            "claude-3-5-sonnet": "us-gov.anthropic.claude-3-5-sonnet-20240620-v1:0"
+                            "claude-3-5-sonnet": "us.anthropic.claude-3-5-sonnet-20240620-v1:0"
                         }
                     },
-                    "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile"
+                    "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us.anthropic.claude-3-5-sonnet-20240620-v1:0"
                 },
                 {
                     "models": ["claude-3-7-sonnet"],
@@ -42,7 +42,7 @@
                             "claude-3-7-sonnet": "us-gov.anthropic.claude-3-7-sonnet-20250219-v1:0"
                         }
                     },
-                    "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile"
+                    "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us-gov.anthropic.claude-3-7-sonnet-20250219-v1:0"
                 }
             ]
         }
