--- a/docker/config.json
+++ b/docker/config.json
@@ -3,7 +3,7 @@
         "bedrock": {
             "keys": [
                 {
-                    "models": ["claude-3-haiku"],
+                    "models": ["anthropic.claude-3-haiku-20240307-v1:0"],
                     "weight": 1.0,
                     "bedrock_key_config": {
                         "access_key": "",
@@ -17,7 +17,7 @@
                     "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us-gov.anthropic.claude-3-haiku-20240307-v1:0"
                 },
                 {
-                    "models": ["claude-3-5-sonnet"],
+                    "models": ["anthropic.claude-3-5-sonnet-20240620-v1:0"],
                     "weight": 1.0,
                     "bedrock_key_config": {
                         "access_key": "",
@@ -31,7 +31,7 @@
                     "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us.anthropic.claude-3-5-sonnet-20240620-v1:0"
                 },
                 {
-                    "models": ["claude-3-7-sonnet"],
+                    "models": ["anthropic.claude-3-7-sonnet-20250219-v1:0"],
                     "weight": 1.0,
                     "bedrock_key_config": {
                         "access_key": "",
