--- a/docker/config.json
+++ b/docker/config.json
@@ -6,13 +6,7 @@
                     "models": ["anthropic.claude-3-haiku-20240307-v1:0"],
                     "weight": 1.0,
                     "bedrock_key_config": {
-                        "access_key": "",
-                        "secret_key": "",
-                        "session_token": "",
-                        "region": "us-gov-east-1",
-                        "deployments": {
-                            "claude-3-haiku": "us-gov.anthropic.claude-3-haiku-20240307-v1:0"
-                        }
+                        "region": "us-gov-east-1"
                     },
                     "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us-gov.anthropic.claude-3-haiku-20240307-v1:0"
                 },
@@ -20,13 +14,7 @@
                     "models": ["anthropic.claude-3-5-sonnet-20240620-v1:0"],
                     "weight": 1.0,
                     "bedrock_key_config": {
-                        "access_key": "",
-                        "secret_key": "",
-                        "session_token": "",
-                        "region": "us-gov-east-1",
-                        "deployments": {
-                            "claude-3-5-sonnet": "us.anthropic.claude-3-5-sonnet-20240620-v1:0"
-                        }
+                        "region": "us-gov-east-1"
                     },
                     "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us.anthropic.claude-3-5-sonnet-20240620-v1:0"
                 },
@@ -34,13 +22,7 @@
                     "models": ["anthropic.claude-3-7-sonnet-20250219-v1:0"],
                     "weight": 1.0,
                     "bedrock_key_config": {
-                        "access_key": "",
-                        "secret_key": "",
-                        "session_token": "",
-                        "region": "us-gov-east-1",
-                        "deployments": {
-                            "claude-3-7-sonnet": "us-gov.anthropic.claude-3-7-sonnet-20250219-v1:0"
-                        }
+                        "region": "us-gov-east-1"
                     },
                     "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us-gov.anthropic.claude-3-7-sonnet-20250219-v1:0"
                 }
