--- a/docker/config.json
+++ b/docker/config.json
@@ -3,7 +3,7 @@
         "bedrock": {
             "keys": [
                 {
-                    "models": ["anthropic.claude-3-haiku-20240307-v1:0"],
+                    "models": ["claude-3-haiku-20240307-v1:0", "claude-3-haiku"],
                     "weight": 1.0,
                     "bedrock_key_config": {
                         "region": "us-gov-east-1"
@@ -11,7 +11,7 @@
                     "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us-gov.anthropic.claude-3-haiku-20240307-v1:0"
                 },
                 {
-                    "models": ["anthropic.claude-3-5-sonnet-20240620-v1:0"],
+                    "models": ["claude-3-5-sonnet-20240620-v1:0", "claude-3-5-sonnet"],
                     "weight": 1.0,
                     "bedrock_key_config": {
                         "access_key": "env.AWS_ACCESS_KEY_ID",
@@ -22,7 +22,7 @@
                     "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us.anthropic.claude-3-5-sonnet-20240620-v1:0"
                 },
                 {
-                    "models": ["anthropic.claude-3-7-sonnet-20250219-v1:0"],
+                    "models": ["claude-3-7-sonnet-20250219-v1:0", "claude-3-7-sonnet"],
                     "weight": 1.0,
                     "bedrock_key_config": {
                         "access_key": "",
