--- a/docker/config.json
+++ b/docker/config.json
@@ -3,32 +3,41 @@
         "bedrock": {
             "keys": [
                 {
-                    "models": ["claude-3-haiku-20240307-v1:0", "claude-3-haiku"],
+                    "models": ["claude-3-haiku-20240307-v1:0"],
                     "weight": 1.0,
                     "bedrock_key_config": {
-                        "region": "us-gov-east-1"
+                        "region": "us-gov-east-1",
+                        "deployments": {
+                            "claude-3-sonnet": "us-gov.anthropic.claude-3-haiku-20240307-v1:0"
+                        }
                     },
                     "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us-gov.anthropic.claude-3-haiku-20240307-v1:0"
                 },
                 {
-                    "models": ["claude-3-5-sonnet-20240620-v1:0", "claude-3-5-sonnet"],
+                    "models": ["claude-3-5-sonnet-20240620-v1:0"],
                     "weight": 1.0,
                     "bedrock_key_config": {
                         "access_key": "env.AWS_ACCESS_KEY_ID",
                         "secret_key": "env.AWS_SECRET_ACCESS_KEY",
                         "session_token": "env.AWS_SESSION_TOKEN",
-                        "region": "us-gov-east-1"
+                        "region": "us-gov-east-1",
+                        "deployments": {
+                            "claude-3-sonnet": "us-gov.anthropic.claude-3-5-sonnet-20240620-v1:0"
+                        }
                     },
                     "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us.anthropic.claude-3-5-sonnet-20240620-v1:0"
                 },
                 {
-                    "models": ["claude-3-7-sonnet-20250219-v1:0", "claude-3-7-sonnet"],
+                    "models": ["claude-3-7-sonnet-20250219-v1:0"],
                     "weight": 1.0,
                     "bedrock_key_config": {
                         "access_key": "",
                         "secret_key": "",
                         "session_token": "",
-                        "region": "us-gov-east-1"
+                        "region": "us-gov-east-1",
+                        "deployments": {
+                            "claude-3-sonnet": "us-gov.anthropic.claude-3-7-sonnet-20250219-v1:0"
+                        }
                     },
                     "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us-gov.anthropic.claude-3-7-sonnet-20250219-v1:0"
                 }
