--- a/docker/config.json
+++ b/docker/config.json
@@ -8,7 +8,7 @@
                     "bedrock_key_config": {
                         "region": "us-gov-east-1",
                         "deployments": {
-                            "claude-3-sonnet": "us-gov.anthropic.claude-3-haiku-20240307-v1:0"
+                            "claude-3-haiku": "us-gov.anthropic.claude-3-haiku-20240307-v1:0"
                         }
                     },
                     "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us-gov.anthropic.claude-3-haiku-20240307-v1:0"
@@ -22,7 +22,7 @@
                         "session_token": "env.AWS_SESSION_TOKEN",
                         "region": "us-gov-east-1",
                         "deployments": {
-                            "claude-3-sonnet": "us-gov.anthropic.claude-3-5-sonnet-20240620-v1:0"
+                            "claude-3-5-sonnet": "us-gov.anthropic.claude-3-5-sonnet-20240620-v1:0"
                         }
                     },
                     "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us.anthropic.claude-3-5-sonnet-20240620-v1:0"
@@ -36,7 +36,7 @@
                         "session_token": "",
                         "region": "us-gov-east-1",
                         "deployments": {
-                            "claude-3-sonnet": "us-gov.anthropic.claude-3-7-sonnet-20250219-v1:0"
+                            "claude-3-7-sonnet": "us-gov.anthropic.claude-3-7-sonnet-20250219-v1:0"
                         }
                     },
                     "arn": "arn:aws-us-gov:bedrock:us-gov-east-1:465578772136:inference-profile/us-gov.anthropic.claude-3-7-sonnet-20250219-v1:0"
